# multi-poetry-runner

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  FIX-MYPY.md  README.md  pyproject.toml  test-config.yaml
.github/workflows/: ci.yml  publish.yml
src/multi_poetry_runner/: __init__.py  cli.py
src/multi_poetry_runner/core/: __init__.py  dependencies.py  hooks.py  release.py  testing.py  version_manager.py  workspace.py
src/multi_poetry_runner/templates/: __init__.py
src/multi_poetry_runner/utils/: __init__.py  config.py  logger.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_dependencies.py  test_fixtures.py  test_hooks.py  test_release.py  test_testing_module.py  test_version_manager.py  test_workspace.py
