[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "multi-poetry-runner"
version = "0.1.0"
description = "Multi-repository Poetry project management toolset"
authors = ["Tomáš Bouška <tomas@buvis.net>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<4.0"
click = "^8.1.0"
pyyaml = "^6.0"
toml = "^0.10.2"
jinja2 = "^3.1.0"
rich = "^13.0.0"
gitpython = "^3.1.0"
docker = "^7.0.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"
black = "^25.0.0"
ruff = "^0.12.0"
mypy = "^1.0.0"
types-pyyaml = "^6.0.0"
types-toml = "^0.10.0"
pylint = "^3.3.8"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
mpr = "multi_poetry_runner.cli:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "N", "UP", "RUF"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
    "--cov=multi_poetry_runner",
    "--cov-report=term-missing",
]
